# data-analyst-agent

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  report.md
backend/: __init__.py  audit.py  authz.py  config.py  exporters.py  fastapi_app.py  job_store.py  metrics_exporter.py  observability.py  pdf_exporter.py  postgres_store.py  preflight.py  production_check.py  rate_limiter.py  schemas.py  security_headers.py  server.py  service.py  store_factory.py  usage.py  worker.py
data_analyst_agent/: __init__.py  agent.py  analysis_profile.py  business.py  charting.py  cli.py  data_safety.py  database_connector.py  datasets.py  executor.py  followup.py  guardrails.py  insights.py  llm_provider.py  models.py  options.py  plan_validator.py  planner.py  profiler.py  relationships.py  report_templates.py  reporter.py  sandbox.py  semantics.py  serialization.py  sql_safety.py  verification.py
docker/: sandbox.Dockerfile  sandbox_runner.py
docs/: API.md  OPERATIONS.md  PRODUCTION_E2E_CHECK.zh-CN.md  PRODUCTION_VERIFICATION.zh-CN.md  QUICKSTART.zh-CN.md  SAAS_READINESS.zh-CN.md  SALES_OPERATIONS_AGENT.md  SALES_REVIEW_DEMO.md  TOOL_AGENT_SPEC.md  launch-hardening.md
evals/: README.md  cases.json  last_results.json  run_evals.py
examples/: customer_ops.csv  marketing_funnel.csv  monthly_sales.csv  sales.csv  subscription_retention.csv
frontend/: api.js  app.js  charts.js  exports.js  index.html  jobs.js  labels.js  renderers.js  state.js  styles.css
(+14 files in other folders)
